<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="130dp">

<!--create compnents of recycler view-->
    <androidx.cardview.widget.CardView
        android:id="@+id/profilePic"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="29.5dp"
        app:cardCornerRadius="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/profile_image_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/profileInfo"
        android:layout_width="259dp"
        android:layout_height="100dp"
        android:layout_marginLeft="28.5dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="34dp"
        app:cardElevation="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profilePic"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/profile_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="26.58dp"
                android:layout_marginTop="18.72dp"
                android:text="@string/textview"
                android:textAppearance="@style/general_text_style"
                android:textSize="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="114dp"
                tools:layout_editor_absoluteY="19dp" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50.49dp"
                android:layout_marginTop="46.17dp"
                android:text="@string/date"
                android:textAppearance="@style/general_text_style"
                android:textSize="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="16dp" />

            <TextView
                android:id="@+id/daysLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50.21dp"
                android:layout_marginTop="70.55dp"
                android:text="@string/daysLeft"
                android:textAppearance="@style/general_text_style"
                android:textSize="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteX="28dp" />

            <ImageView
                android:id="@+id/daysleftImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginBottom="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/daysLeft"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/ic_group__2_" />

            <ImageView
                android:id="@+id/bdaycakeImage"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toTopOf="@id/daysleftImage"
                app:layout_constraintEnd_toStartOf="@+id/date"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="10dp"
                app:srcCompat="@drawable/bdaycake"
                tools:layout_editor_absoluteY="47dp" />

            <ImageView
                android:id="@+id/verticalBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/status_bar_item_app_background"
                app:tint="@color/black" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>